--- a/pole.html
+++ b/pole.html
@@ -6,21 +6,39 @@
 	<link rel="stylesheet" type="text/css" href="sys/css/style.css">
 	<link rel="stylesheet" href="sys/css/normalize.css">
 	<link rel="stylesheet" href="sys/css/skeleton.css">
+	<script type="text/javascript" src='sys/js/vue.js'></script>
 </head>
 <body>
 	<div id='pole'></div>
-	<script type="text/javascript" src='sys/js/main.js'></script>
 	<br>
-	<button class='button-primary' onclick='randBlockMark()'>Закрасить рандомный блок</button>
-	<button onclick='blockk = new unitMaker("m",1,1);getId("hid").style.display="block";'>Создать блок</button>
-	<button onclick='blockk = new unitMaker("w",1,1);getId("hid").style.display="block";'>Создать стену</button>
+	<button class='button-primary' onclick='vm.nowMainSelect = new Mage("team","name",1,1);getId("hid").style.display="block";'>Создать блок</button>
+	<button onclick='vm.nowMainSelect = new Wall(1,1);getId("hid").style.display="block";'>Создать стену</button>
 	<button onclick='genWalls()'>Создать границы</button>
 	<div id='hid' style='display: none'>
-		<button onclick='blockk.move("n")'>/\</button>
-		<button onclick='blockk.move("s")'>\/</button>
-		<button onclick='blockk.move("w")'><-</button>
-		<button onclick='blockk.move("o")'>-></button>
-		<button onclick='blockk.remove()'>DELETE</button>
+		<div class='row'>
+			<button onclick='vm.nowMainSelect.move({x:-1,y:-1})'>\</button>
+			<button onclick='vm.nowMainSelect.move({y:-1})'>/\</button>
+			<button onclick='vm.nowMainSelect.move({x:1,y:-1})'>/-</button>
+		</div>
+		<br>
+		<div class='row'>
+			<button onclick='vm.nowMainSelect.move({x:-1})'><-</button>
+			<button>SKIP</button>
+			<button onclick='vm.nowMainSelect.move({x:1})'>-></button>
+		</div>
+		<br>
+		<div class='row'>
+			<button onclick='vm.nowMainSelect.move({x:-1,y:1})'>/_</button>
+			<button onclick='vm.nowMainSelect.move({y:1})'>\/</button>
+			<button onclick='vm.nowMainSelect.move({x:1,y:1})'>_\</button>
+		</div>
+		<br>
+		<button onclick='vm.nowMainSelect.remove()'>DELETE</button>
+		<div v-if='nowMainSelect'>
+			<bar :color1='"lightgreen"' :color2='"green"' :width='"100px"' :height='"30px"' :num='nowMainSelect.hp' :numof='nowMainSelect.hpMax'></bar>
+			<bar :color1='"lightblue"' :color2='"blue"' :width='"100px"' :height='"30px"' :num='nowMainSelect.mp' :numof='nowMainSelect.mpMax'></bar>
+		</div>
 	</div>
+	<script type="text/javascript" src='sys/js/main.js'></script>
 </body>
 </html>
